service2.yaml
{
  "kind": "Service",
  "apiVersion": "v1",
  "metadata": {
    "name": "example-service"
  },
  "spec": {
    "ports": [{
                "port": 8888,
                "targetPort": 8888
              }],
    "selector": {
      "app": "nomApp"
    },
    "type": "LoadBalancer"
  }
}
